<resources>
    <string name="app_name">Asset Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="field_required_error_msg">Field required</string>
    <string name="menu_login">Login</string>
    <string name="exit_or_sign_out_app_msg">Do you want to exit or sign out from the App?</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="version">Version</string>
    <string name="logout">Log out</string>
    <string name="app_version_short">V1.0.0</string>
    <string name="exit_app_msg">Do you want to exit from the App?</string>
    <string name="logout_app_msg">Do you want to logout from the app?</string>
    <string name="description_logo">App logo</string>
</resources>